--- a/global-con/src/css/jobs.css
+++ b/global-con/src/css/jobs.css
@@ -1,21 +1,26 @@
 /* src/css/jobs.css */
 
 #jobs {
-    padding: 20px;
+    
     background-color: var(--global-bg);
     color: var(--global-text);
   }
   
   .jobs-banner h2 {
+    background-color:  var(--global-nav-bg);
+    color: var(--global-white);
+    font-size: 150%;
     text-align: center;
-    color: var(--global-header-bg);
-    margin-bottom: 20px;
+    padding: 20px;
+    margin: 0;
   }
   
   .jobs-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 20px;
+    padding: 20px;
+    margin: 40px auto;
   }
   
   .job {
